--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
 					<header class="major">
 						<h2>But what do I outside of class?</h2>
 					</header>
+					<img src="/svg/soft-drinks.svg" class="icofonts">
 					<h4>Bubble Tea Reviews</h4>
 					<p>I love Asian food, but I don't like taking pics of what I eat because I just wanna eat.
 						Look I'm <strong>hungry</strong>. That said, I consider myself a local bubble tea connoisseur.
@@ -225,6 +226,7 @@
 								</tr>
 							</tbody>
 						</table>
+						<img src="/svg/camera.svg" class="icofonts">
 						<h4>Photography</h4>
 						<p>Seeing beautiful photos of nature and urban environments inspired me to start taking it more seriously.
 							I'm not the best you'll meet, but getting better with every photo captured is part of the fun journey.
@@ -243,6 +245,7 @@
 								<div class="col-4"><span class="image fit"><img src="images/path.jpg" alt="" /></span></div>
 							</div>
 						</div>
+						<img src="/svg/honey.svg" class="icofonts">
 						<h4>Beekeeping</h4>
 						<p>Now while LinkedIn shows beekeeping as my highest endorsed skill, it is <bold>not</bold> my strongest skill.
 							I took a class on it during my undergraduate career for fun, and I learned so much about honey tasting and raising bees.
