--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 								<li>Worked with 2 other interns in Agile environment to develop a single page application using Angular</li>
 								<li>Utilized REST API to implement C.R.U.D functionality</li>
 								<li>Developed components, services, and routing</li>
-								<li>Designed table searhcing, tooltips, object duplication, and page stylings</li>
+								<li>Designed table searching, tooltips, object duplication, and page stylings</li>
 							</ul>
 							<header>
 								<!-- <span style="max-width: 10%;" class="image left"><img src="images/HCIL.gif" alt="" /></span> -->
