--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 						</div>
 						<img src="/svg/honey.svg" class="icofonts">
 						<h4>Beekeeping</h4>
-						<p>Now while LinkedIn shows beekeeping as my highest endorsed skill, it is <bold>not</bold> my strongest skill.
+						<p>Contrary to what LinkedIn may show, beekeeping is <b>not</b> my strongest skill.
 							I took a class on it during my undergraduate career for fun, and I learned so much about honey tasting and raising bees.
 							I am hoping to continue honing my skills in this difficult but rewarding craft.
 						</p>
