--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 								<tr>
 									<td>5</td>
 									<td>Ten Ren's</td>
-									<td>I'm not one to complain about food, but man this ain't it. If you're paying the same, you might as well go elsewhere for a better experience overall. Bubbles hurt your teeth chewing it, and you get a bit of tea with that bucket of ice. Food isn't bad, but place has been shutdown for sanitation reasons.</td>
+									<td>I'm not one to complain about food, but man this ain't it. If you're paying the same, you might as well go elsewhere for a better experience overall. Bubbles hurt your teeth chewing it, and you get a bit of tea with that bucket of ice. Food isn't bad, but place has been shutdown for sanitation issues before.</td>
 									<td>$$</td>
 								</tr>
 							</tbody>
