--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 							My interests have since shifted towards software engineering, UI/UX, and product management. 
 						</p>
 						<p>
-							Everyone knows and appreciates a well-designed page, but we often spend more time bashing the terrible ones. 
-							My goal is to develop interfaces that attract compliments, not roasts. 
+							Everyone knows and appreciates a well-designed page, but we often spend more time bashing the terrible ones.
+							In the same way that artists capture emotions in their artwork, I want to develop interfaces that make users happy.
 							In the future, I am looking to pursue a master's in human-computer interaction to better understand the impact of design principles on technology. 
 						</p>
 					</div>
