--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						</p>
 						<p>
 							Everyone knows and appreciates a well-designed page, but we often spend more time bashing the terrible ones.
-							In the same way that artists capture emotions in their artwork, I want to develop interfaces that make users happy.
+							Similar to how an artist captures emotions in their artwork, I want to develop meaningful interfaces that make users happy.
 							In the future, I am looking to pursue a master's in human-computer interaction to better understand the impact of design principles on technology. 
 						</p>
 					</div>
