--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@
 								<p>Human-Computer Interaction Teaching Assistant</p>
 							</header>
 							<ul>
-								<li>Provided design critiques and graded assignments related to group assignments</li>
-								<li>Held periodic meetings with groups to check on project progress</li>
+								<li>Critiqued project sketches and prototypes to aid in design of minimally viable product</li>
+								<li>Assisted in writing and grading exam questions</li>
+								<li>Held office hours with groups to receive progress updates on the semester long project</li>
 							</ul>
 						</section>
 					</div>
