--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
 							<ul>
 								<li>Repaired bugs and developed new features in React and Flask code on Video Annotation Tool</li>
 								<li>Performed user testing sessions on target users</li>
-								<li>Conducted analysis on strengths and weaknesses of competing tools in market</li>
+								<li>Created wireframes and a mockup for a planned interface update</li>
+								<li>Conducted analysis on strengths and weaknesses of competing tools' UX</li>
 								<li>Assisted in writing paper to be presented at CHI conference</li>
 							</ul>
 							<header>
