--- a/index.html
+++ b/index.html
@@ -33,13 +33,9 @@
 						</header>
 						<p>
 							My name is John, and I'm a student at UMD studying computer science and criminology. 
-							Why this combination of majors you ask? I originally had dreams of working digital forensics or cyber analytics, but movies tend to overexaggerate these roles.
-							My interests have since shifted towards software engineering, UI/UX, and product management. 
-						</p>
-						<p>
-							Everyone knows and appreciates a well-designed page, but we often spend more time bashing the terrible ones.
-							Similar to how an artist captures emotions in their artwork, I want to develop meaningful interfaces that make users happy.
-							In the future, I am looking to pursue a master's in human-computer interaction to better understand the impact of design principles on technology. 
+							My current interests lie with product management and software engineering.
+							I'm more so interested in product management because I want to work with people of different backgrounds in order to bring meaningful products to the customer.
+							How something is built is always interesting to me, but I also want to know what and why something is made.
 						</p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
