--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							My name is John, and I'm a student at UMD studying computer science and criminology. 
 							My current interests lie with product management and software engineering.
 							I'm more so interested in product management because I want to work with people of different backgrounds in order to bring meaningful products to the customer.
-							How something is built is always interesting to me, but I also want to know what and why something is made.
+							How something is built is always interesting to me, but I also want to know why something is made.
 						</p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
