--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 							<h2>About Me</h2>
 						</header>
 						<p>
-							My name is John, and I'm a student at UMD studying computer science and criminology. 
+							Hi! I'm John, and I graduated from UMD with degrees in CS and criminology.
 							My current interests lie with product management and software engineering.
 							I'm more so interested in product management because I want to work with people of different backgrounds in order to bring meaningful products to the customer.
-							How something is built is always interesting to me, but I also want to know why something is made.
+							How something is built is always interesting to me, but I also want to know why something is made.	
 						</p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
@@ -89,13 +89,12 @@
 							<header>
 								<!-- <span class="image left"><img src="images/SAS.jpg" alt="" /></span> -->
 								<h4>SAS Institute</h4>
-								<p>Technical Intern</p>
+								<p>Software Development Intern</p>
 							</header>
 							<ul>
-								<li>Worked with 2 other interns in Agile environment to develop a single page application using Angular</li>
-								<li>Utilized REST API to implement C.R.U.D functionality</li>
-								<li>Developed components, services, and routing</li>
-								<li>Designed table searching, tooltips, object duplication, and page stylings</li>
+								<li>Developed a single-page application with Angular to model a typical enterprise’s network and user data to test SAS Talon’s efficacy in finding cyberattacks</li>
+								<li>Integrated a REST API into tool to support create, read, update, and delete functionality for objects</li>
+								<li>Improved accuracy of configuration files by 12% and reduced development time by 20%</li>
 							</ul>
 							<header>
 								<!-- <span style="max-width: 10%;" class="image left"><img src="images/HCIL.gif" alt="" /></span> -->
@@ -103,11 +102,9 @@
 								<p>Research Assistant</p>
 							</header>
 							<ul>
-								<li>Repaired bugs and developed new features in React and Flask code on Video Annotation Tool</li>
-								<li>Performed user testing sessions on target users</li>
-								<li>Created wireframes and a mockup for a planned interface update</li>
-								<li>Conducted analysis on strengths and weaknesses of competing tools' UX</li>
-								<li>Assisted in writing paper to be presented at CHI conference</li>
+								<li>Improved video annotation tool’s user workflow using React and Flask</li>
+								<li>Designed mockups in Adobe XD to support planning of interface overhaul</li>
+								<li>Performed metric based testing sessions on target users and analyzed competing annotation tools’ UX</li>
 							</ul>
 							<header>
 								<!-- <span style="max-width: 12%;" class="image left"><img src="images/CS.png" alt="" /></span> -->
@@ -115,9 +112,9 @@
 								<p>Human-Computer Interaction Teaching Assistant</p>
 							</header>
 							<ul>
-								<li>Critiqued project sketches and prototypes to aid in design of minimally viable product</li>
-								<li>Assisted in writing and grading exam questions</li>
-								<li>Held office hours with groups to receive progress updates on the semester long project</li>
+								<li>Held weekly office hours to provide feedback on student projects and review key human-computer interaction concepts</li>
+								<li>Presided over the writing and grading of 7 exams for 120 students</li>
+								<li>Produced brief review guides to aid students in using Android Studio for assignments</li>
 							</ul>
 						</section>
 					</div>
@@ -150,7 +147,7 @@
 						</header>
 						<ul>
 							<li>Managed a group of 70 residents by assisting with academic and personal development</li>
-							<li>Resolved roommate conflicts and responded to emergencies swiftly, discretely, and professionally</li>
+							<li>Resolved roommate conflicts and responded to emergencies swiftly and professionally</li>
 						</ul>
 						<header>
 							<!-- <span style="max-width: 15%;" class="image left"><img src="images/comcast.jpg" alt="" /></span> -->
@@ -272,11 +269,11 @@
 					<ul class="icons">
 						<li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/jgao1238/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a target="_blank" rel="noopener noreferrer" href="https://github.com/jgao1238" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="mailto: contactMeOnLinkedIn" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						<!-- <li><a href="mailto: contactMeOnLinkedIn" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li> -->
 					</ul>
-					<ul class="copyright">
+					<!-- <ul class="copyright">
 						<li>&copy; There's no way this is copyright protected right?</li>
-					</ul>
+					</ul> -->
 				</footer>
 			</section>
 
